styled heading and added media query to fix form sections from stacking on smaller screen sizes for credit card form

--- a/css/credit-debit.css
+++ b/css/credit-debit.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   background: url('../images/blueberries.jpeg') no-repeat;
   background-size: cover;
@@ -13,6 +17,23 @@ body {
   content: "";
   display: table;
   clear: both;
+}
+
+h1, .total-area i, input[type="submit"] {
+  color: #FFF;
+}
+
+h1 {
+  text-align: center;
+  padding-top: 50px;
+  font-weight: 900;
+  font-size: 3rem;
+}
+
+h1 span {
+  display: inline-block;
+  border: 1px solid #FFF;
+  padding: .1em;
 }
 
 form {
@@ -38,7 +59,6 @@ form > div, .row .control {
 
 .total-area i {
   font-size: 7rem;
-  color: #FFF;
 }
 
 .total, .amount {
@@ -78,6 +98,10 @@ form > div, .row .control {
   width: 50%;
 }
 
+.row:nth-of-type(3) .control:first-child {
+  padding-right: 20px;
+}
+
 h2 {
   font-size: 2.3rem;
   padding-bottom: .7em;
@@ -92,7 +116,7 @@ label {
   padding-bottom: .2em;
 }
 
-input {
+input, .select select {
   outline: none;
   font-family: 'Raleway', sans-serif;
 }
@@ -107,13 +131,60 @@ input[type="text"], input[type="password"] {
 input[type="submit"] {
   border: 0;
   background: #00A9A5;
-  color: #FFF;
   text-transform: uppercase;
   padding: .5em 2em;
   font-size: 1rem;
   font-weight: 500;
   margin-top: 25px;
   cursor: pointer;
+}
+
+.select {
+  position: relative;
+}
+
+.select select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border: 1px solid #4E8098;
+  width: 100%;
+  border-radius: 0;
+  background: #FFF;
+  padding: .45em;
+  font-size: .8rem;
+  cursor: pointer;
+}
+
+.select select::-ms-expand {
+  display: none;
+}
+
+.arrow {
+  position: absolute;
+  width: 0;
+  height: 0;
+  pointer-events: none;
+  border-width: 8px 5px 0 5px;
+  border-style: solid;
+  border-color: #4E8098 transparent transparent transparent;
+  top: 50%;
+  right: 10%;
+  margin-top: -4px;
+}
+
+@media (max-width: 1270px) {
+  form {
+    width: 60%;
+  }
+
+  .total-area {
+    width: 23%;
+  }
+
+  .form-elements {
+    width: 77%;
+  }
 }
 
 
